              (when a campaign has been sent) are now absolute.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The EmptyEnumerator fallback now either raises an exception (ENUMERABLE_REGISTRATION_ERROR=True) or logs an error.
          This change is done to prevent issues with empty select when an enumerator is not correctly configured.
        # Fix an issue when an event 'end' is null during drag-n-drop (allday events).
        # Fix calendar eventTimeFormat & slotLabelFormat issues : 24h rendered as 12h, wrong datetime or date ranges.
        # Fix creme.utils.ajaxQuery unexpected error when the query returns a 'Connection Error' without data


== Version 2.6.10 ==

  Users side :
  ------------
    # A crash in the job scheduler (command "creme_job_manager") has been fixed.
    # Apps :
        * Emails :
            - The help text for signatures' images has been improved.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The method 'creme_core.utils.CremeDiscoverRunner.setup_databases()' has been updated to prevent running
          the 'creme_populate' command on the default test database when the test suite is launched in
          parallel mode. This change is done to prevent cache leaking when the test processes are forked.
          This is a backport from Creme '2.7'.
        # The class 'EnumerableModelChoiceField' now handles correctly callable objects for model-field default value.


== Version 2.6.9 ==

  Users side :
  ------------
    # An loading issue (with the lib 'cryptography'), which caused crash at
      start-up in some environments, has been fixed.
    # The 'populate' scripts could failed on menu configuration in some cases.
    # There was issue when a FileRef is creating when a CremeModel is deleted:
      the path could be too long to be stored by the FileRef, which caused an error.


== Version 2.6.8 ==

  Users side :